tests/failing/incompatype_type_test.stderr
error: expected `struct`
 --> tests/failing/incompatype_type_test.rs:4:1
  |
4 | enum Enum {
  | ^^^^
